--- a/Arrays.ipynb
+++ b/Arrays.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,17 +54,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Array:\n",
-      " [ 5 10 15 20 25 30 35 40]\n",
-      "Elements 2 and 3:\n",
-      " [15 20]\n",
+      "Array: [ 5 10 15 20 25 30 35 40]\n",
+      "Elements 2 and 3: [15 20]\n",
       "First 2 elements: [ 5 10]\n",
       "Last 2 elements: [35 40]\n"
      ]
@@ -89,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -361,12 +359,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Min and Max"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Min: 2\n",
+      "Min: 2\n",
+      "Max: 10\n",
+      "Max: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([2, 5, 10])\n",
+    "\n",
+    "print(\"Min:\", arr.min())\n",
+    "print(\"Min:\", np.min(arr))\n",
+    "print(\"Max:\", arr.max())\n",
+    "print(\"Max:\", np.max(arr))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Finding the positions of the largest values in an array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -391,8 +421,8 @@
     "arr = np.array([[1, 2, 3], [4, 5, 6]])\n",
     "print(\"Array:\\n\", arr)\n",
     "print(\"\\nPosition of the largest value in the (flattened) array:\", np.argmax(arr))\n",
-    "print(\"\\nPosition of largest value in each column:\\n\", np.argmax(a, axis=0))\n",
-    "print(\"\\nPosition of largest value in each row:\\n\", np.argmax(a, axis=1))"
+    "print(\"\\nPosition of largest value in each column:\\n\", np.argmax(arr, axis=0))\n",
+    "print(\"\\nPosition of largest value in each row:\\n\", np.argmax(arr, axis=1))"
    ]
   },
   {
@@ -404,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -518,6 +548,110 @@
     "\n",
     "print(\"\\nSqueezed:\\n\", arr.squeeze())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Median"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array:\n",
+      " [nan  4.  8. 10.]\n",
+      "Median of an array with a nan will be nan: nan\n",
+      "Median of an array with with nan removed will be a number: 8.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([np.nan, 4, 8, 10])\n",
+    "print(\"Array:\\n\", arr)\n",
+    "print(\"Median of an array with a nan will be nan:\", np.median(arr))\n",
+    "print(\"Median of an array with with nan removed will be a number:\", np.nanmedian(arr))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Count Nonzero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size: 5\n",
+      "Count: 5\n",
+      "Non-zero count: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([0, 0, 2, 4, 8])\n",
+    "\n",
+    "print(\"Size:\", np.size(arr))\n",
+    "print(\"Count:\", len(arr))\n",
+    "print(\"Non-zero count:\", np.count_nonzero(arr))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All: [0 1 2 4 8]\n",
+      "Every other starting at index 0: [0 2 8]\n",
+      "Every other starting at index 1: [1 4]\n",
+      "Reversed: [8 4 2 1 0]\n",
+      "Reversed except last element: [4 2 1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([0, 1, 2, 4, 8])\n",
+    "\n",
+    "# The basic slice syntax is i:j:k where i is the starting index, \n",
+    "# j is the stopping index, and k is the step\n",
+    "\n",
+    "print(\"All:\", arr[:])\n",
+    "print(\"Every other starting at index 0:\", arr[::2])\n",
+    "print(\"Every other starting at index 1:\", arr[1::2])\n",
+    "print(\"Reversed:\", arr[::-1])\n",
+    "print(\"Reversed except last element:\", arr[-2::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
