--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Functions"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -35,6 +44,47 @@
     "print(\"Prices:\", prices)\n",
     "print(\"Multiply by 5:\", multiplier(prices, 5))\n",
     "print(\"Multiply by 10 using partial:\", multiply_by_10(prices))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Viewing function code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class DataFrame(NDFrame):\n",
+      "    \"\"\"\n",
+      "    Two-dimensional, size-mutable, potentially heterogeneous tabular data.\n",
+      "\n",
+      "    Data structure also contains labeled axes (rows and columns).\n",
+      "    Arithmetic operations align on both row and column labels. Can be\n",
+      "    thought of as a dict-like container for Series objects. The primary\n",
+      "    pandas data structure.\n",
+      "\n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    data : ndarray (structured or homogeneous), Iterable, dict, or DataFrame\n",
+      "        Dict can contain Series, arrays, consta\n"
+     ]
+    }
+   ],
+   "source": [
+    "import inspect\n",
+    "import pandas as pd\n",
+    "\n",
+    "source = inspect.getsource(pd.DataFrame)\n",
+    "\n",
+    "print(source[:500])"
    ]
   }
  ],
