--- a/Categorical Variable Encoding.ipynb
+++ b/Categorical Variable Encoding.ipynb
@@ -9,7 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.feature_extraction import DictVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -80,16 +93,12 @@
        "3       11           student                3                 1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
     "df = pd.DataFrame({\n",
     "    \"user_id\": [1, 10, 5, 11],\n",
     "    \"vertical\": ['work','student','professional-use','student']\n",
@@ -108,6 +117,172 @@
     "# by algorithms as having some sort of hierarchy/order in them\".\n",
     "\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Encoding all categorical columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>m</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>f</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20</td>\n",
+       "      <td>m</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Fare Sex Embarked\n",
+       "0     4   m        S\n",
+       "1    10   f        C\n",
+       "2    20   m        S"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Label encoded:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Fare  Sex  Embarked\n",
+       "0     4    1         1\n",
+       "1    10    0         0\n",
+       "2    20    1         1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({\n",
+    "    \"Fare\": [4, 10, 20],\n",
+    "    \"Sex\": [\"m\", \"f\", \"m\"],\n",
+    "    \"Embarked\": [\"S\", \"C\", \"S\"]\n",
+    "})\n",
+    "\n",
+    "print(\"Original:\")\n",
+    "display(df)\n",
+    "\n",
+    "categorical_mask = df.dtypes == \"object\"\n",
+    "categorical_columns = df.columns[categorical_mask].to_list()\n",
+    "\n",
+    "le = LabelEncoder()\n",
+    "df[categorical_columns] = df[categorical_columns].apply(lambda x: le.fit_transform(x))\n",
+    "\n",
+    "print(\"\\nLabel encoded:\")\n",
+    "display(df)"
    ]
   },
   {
@@ -321,11 +496,119 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### OneHotEncoding categorical columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>m</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>f</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20</td>\n",
+       "      <td>m</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Fare Sex Embarked\n",
+       "0     4   m        S\n",
+       "1    10   f        C\n",
+       "2    20   m        S"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  1.,  0.,  1.,  4.],\n",
+       "       [ 1.,  0.,  1.,  0., 10.],\n",
+       "       [ 0.,  1.,  0.,  1., 20.]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({\n",
+    "    \"Fare\": [4, 10, 20],\n",
+    "    \"Sex\": [\"m\", \"f\", \"m\"],\n",
+    "    \"Embarked\": [\"S\", \"C\", \"S\"]\n",
+    "})\n",
+    "\n",
+    "print(\"Original:\")\n",
+    "display(df)\n",
+    "\n",
+    "ct = ColumnTransformer(\n",
+    "    [('one_hot_encoder', OneHotEncoder(), [1, 2])],    # The column numbers to be transformed (here is [0] but can be [0, 1, 3])\n",
+    "    remainder='passthrough'                         # Leave the rest of the columns untouched\n",
+    ")\n",
+    "\n",
+    "enc = ct.fit_transform(df)\n",
+    "display(enc)\n",
+    "\n",
+    "# categorical_mask = df.dtypes == \"object\"\n",
+    "# ohe = OneHotEncoder(categories=[3, 2, 2], sparse=False)\n",
+    "# df_encoded = ohe.fit_transform(df)\n",
+    "\n",
+    "# display(df_encoded)"
+   ]
   },
   {
    "cell_type": "code",
@@ -377,6 +660,129 @@
     "# We can avoid the error by passing handle_unknown=\"ignore\" to the OneHotEncoder constractuor\n",
     "# print(\"\\nTransformation on new data with unencoded values:\")\n",
     "# s3 = np.array([5]).reshape(-1, 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dict Vectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>m</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>f</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20</td>\n",
+       "      <td>m</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Fare Sex Embarked\n",
+       "0     4   m        S\n",
+       "1    10   f        C\n",
+       "2    20   m        S"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'Fare': 4, 'Sex': 'm', 'Embarked': 'S'},\n",
+       " {'Fare': 10, 'Sex': 'f', 'Embarked': 'C'},\n",
+       " {'Fare': 20, 'Sex': 'm', 'Embarked': 'S'}]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  1.,  4.,  0.,  1.],\n",
+       "       [ 1.,  0., 10.,  1.,  0.],\n",
+       "       [ 0.,  1., 20.,  0.,  1.]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns represent:\n",
+      "{'Fare': 2, 'Sex=m': 4, 'Embarked=S': 1, 'Sex=f': 3, 'Embarked=C': 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({\n",
+    "    \"Fare\": [4, 10, 20],\n",
+    "    \"Sex\": [\"m\", \"f\", \"m\"],\n",
+    "    \"Embarked\": [\"S\", \"C\", \"S\"]\n",
+    "})\n",
+    "\n",
+    "display(df)\n",
+    "\n",
+    "df_dict = df.to_dict(\"records\")\n",
+    "display(df_dict)\n",
+    "\n",
+    "dv = DictVectorizer(sparse=False)\n",
+    "df_encoded = dv.fit_transform(df_dict)\n",
+    "\n",
+    "display(df_encoded)\n",
+    "\n",
+    "print(\"Columns represent:\")\n",
+    "print(dv.vocabulary_)"
    ]
   },
   {
