--- a/Imputing.ipynb
+++ b/Imputing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -79,11 +79,11 @@
     "import numpy as np\n",
     "from sklearn.impute import SimpleImputer\n",
     "\n",
-    "df = pd.DataFrame({\n",
+    "original = pd.DataFrame({\n",
     "    \"stock\": [\"AAPL\", \"GOOG\", \"TSLA\", np.nan],\n",
     "    \"price\": [20, 30, np.nan, 50]\n",
     "})\n",
-    "display(df)"
+    "display(original)"
    ]
   },
   {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -163,6 +163,7 @@
    "source": [
     "mean_imputer = SimpleImputer(strategy=\"mean\")\n",
     "\n",
+    "df = original.copy()\n",
     "df[[\"price\"]] = mean_imputer.fit_transform(df[[\"price\"]])\n",
     "\n",
     "display(df)"
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -209,33 +210,33 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>AAPL</td>\n",
-       "      <td>20.000000</td>\n",
+       "      <td>20.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>GOOG</td>\n",
-       "      <td>30.000000</td>\n",
+       "      <td>30.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>TSLA</td>\n",
-       "      <td>33.333333</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>MISS</td>\n",
-       "      <td>50.000000</td>\n",
+       "      <td>MISSING</td>\n",
+       "      <td>50.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  stock      price\n",
-       "0  AAPL  20.000000\n",
-       "1  GOOG  30.000000\n",
-       "2  TSLA  33.333333\n",
-       "3  MISS  50.000000"
+       "     stock  price\n",
+       "0     AAPL   20.0\n",
+       "1     GOOG   30.0\n",
+       "2     TSLA    NaN\n",
+       "3  MISSING   50.0"
       ]
      },
      "metadata": {},
@@ -244,9 +245,92 @@
    ],
    "source": [
     "constant_imputer = SimpleImputer(strategy=\"constant\", fill_value=\"MISSING\")\n",
-    "\n",
+    "df = original.copy()\n",
     "df[[\"stock\"]] = constant_imputer.fit_transform(df[[\"stock\"]])\n",
     "\n",
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imputing categorical values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>stock</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GOOG</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>TSLA</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  stock  price\n",
+       "0  AAPL   20.0\n",
+       "1  GOOG   30.0\n",
+       "2  TSLA    NaN\n",
+       "3  AAPL   50.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "constant_imputer = SimpleImputer(strategy=\"most_frequent\")\n",
+    "df = original.copy()\n",
+    "df[[\"stock\"]] = constant_imputer.fit_transform(df[[\"stock\"]])\n",
+    "\n",
+    "# In this case it grabs the first value since they all appear once\n",
     "display(df)"
    ]
   }
