Bunch of new notebooks

--- a/Arrays.ipynb
+++ b/Arrays.ipynb
@@ -647,11 +647,62 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  4  8]\n",
+      " [ 3  6  9]\n",
+      " [ 4  8 12]\n",
+      " [ 5 10 15]]\n",
+      "\n",
+      "Rows: 1 and 2, Column: 0:\n",
+      " [2 3]\n",
+      "\n",
+      "Rows: All, Column: 0:\n",
+      " [2 3 4 5]\n",
+      "\n",
+      "Rows: 1, Column: All:\n",
+      " [2 4 8]\n",
+      "\n",
+      "Rows: 1, Column: Last:\n",
+      " 8\n",
+      "\n",
+      "Rows: All, Column: All except last:\n",
+      " [[ 2  4]\n",
+      " [ 3  6]\n",
+      " [ 4  8]\n",
+      " [ 5 10]]\n",
+      "\n",
+      "Rows: Last, Column: Last:\n",
+      " 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([[2, 4, 8], [3, 6, 9], [4, 8, 12], [5, 10, 15]])\n",
+    "print(arr)\n",
+    "\n",
+    "# arr[rows:columns]\n",
+    "\n",
+    "print(\"\\nRows: 1 and 2, Column: 0:\\n\", arr[0:2,0])\n",
+    "print(\"\\nRows: All, Column: 0:\\n\", arr[:,0])\n",
+    "print(\"\\nRows: 1, Column: All:\\n\", arr[0,:])\n",
+    "print(\"\\nRows: 1, Column: Last:\\n\", arr[0,-1])\n",
+    "print(\"\\nRows: All, Column: All except last:\\n\", arr[:,:-1])\n",
+    "print(\"\\nRows: Last, Column: Last:\\n\", arr[-1,-1])"
+   ]
   }
  ],
  "metadata": {
