--- a/Data Frames.ipynb
+++ b/Data Frames.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -65,6 +65,146 @@
     "print(\"\\nRemoving all rows with NA:\\n\\n\", df.dropna())\n",
     "print(\"\\nRemoving just last names with NA:\\n\\n\", df.dropna(subset=[\"last\"]))\n",
     "print(\"\\nRemoving all columns with NA:\\n\\n\", df.dropna(axis=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Counting missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "first      0\n",
+       "initial    1\n",
+       "last       1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Measuring percent of values in each column that are missing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "first      0.000000\n",
+       "initial    0.333333\n",
+       "last       0.333333\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "percent_missing = df.isna().sum() / len(df)\n",
+    "percent_missing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filtering columns with a high percent of missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "After removing columns with 30%+ missing values:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Matt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Eli</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tom</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  first\n",
+       "0  Matt\n",
+       "1   Eli\n",
+       "2   Tom"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "mask = percent_missing < 0.3\n",
+    "df_filtered = df.loc[:, mask]\n",
+    "print(\"\\nAfter removing columns with 30%+ missing values:\")\n",
+    "display(df_filtered)"
    ]
   },
   {
@@ -150,6 +290,11 @@
        "      <td>9</td>\n",
        "      <td>8.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -164,7 +309,8 @@
        "5      6         5.0\n",
        "6      7         6.0\n",
        "7      8         7.0\n",
-       "8      9         8.0"
+       "8      9         8.0\n",
+       "9     10         9.0"
       ]
      },
      "execution_count": 5,
@@ -189,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +488,7 @@
        "9                               8.5                                      8.5  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -412,53 +558,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>43</td>\n",
-       "      <td>1029</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1658</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>49</td>\n",
-       "      <td>1015</td>\n",
+       "      <td>74</td>\n",
+       "      <td>1460</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>38</td>\n",
-       "      <td>1303</td>\n",
+       "      <td>69</td>\n",
+       "      <td>1369</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>9</td>\n",
-       "      <td>1039</td>\n",
+       "      <td>27</td>\n",
+       "      <td>1297</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>8</td>\n",
-       "      <td>1014</td>\n",
+       "      <td>51</td>\n",
+       "      <td>1434</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>9</td>\n",
-       "      <td>1397</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1302</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>84</td>\n",
-       "      <td>1138</td>\n",
+       "      <td>71</td>\n",
+       "      <td>1972</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>98</td>\n",
-       "      <td>1120</td>\n",
+       "      <td>61</td>\n",
+       "      <td>1604</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>83</td>\n",
-       "      <td>1121</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1608</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>23</td>\n",
-       "      <td>1394</td>\n",
+       "      <td>84</td>\n",
+       "      <td>1091</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -467,16 +613,16 @@
       "text/plain": [
        "       price  other\n",
        "index              \n",
-       "1         43   1029\n",
-       "2         49   1015\n",
-       "3         38   1303\n",
-       "4          9   1039\n",
-       "5          8   1014\n",
-       "6          9   1397\n",
-       "7         84   1138\n",
-       "8         98   1120\n",
-       "9         83   1121\n",
-       "10        23   1394"
+       "1         20   1658\n",
+       "2         74   1460\n",
+       "3         69   1369\n",
+       "4         27   1297\n",
+       "5         51   1434\n",
+       "6         82   1302\n",
+       "7         71   1972\n",
+       "8         61   1604\n",
+       "9         17   1608\n",
+       "10        84   1091"
       ]
      },
      "metadata": {},
@@ -514,19 +660,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>74</td>\n",
+       "      <td>1460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>69</td>\n",
+       "      <td>1369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>51</td>\n",
+       "      <td>1434</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>82</td>\n",
+       "      <td>1302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>84</td>\n",
-       "      <td>1138</td>\n",
+       "      <td>71</td>\n",
+       "      <td>1972</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>98</td>\n",
-       "      <td>1120</td>\n",
+       "      <td>61</td>\n",
+       "      <td>1604</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>83</td>\n",
-       "      <td>1121</td>\n",
+       "      <th>10</th>\n",
+       "      <td>84</td>\n",
+       "      <td>1091</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -535,9 +701,13 @@
       "text/plain": [
        "       price  other\n",
        "index              \n",
-       "7         84   1138\n",
-       "8         98   1120\n",
-       "9         83   1121"
+       "2         74   1460\n",
+       "3         69   1369\n",
+       "5         51   1434\n",
+       "6         82   1302\n",
+       "7         71   1972\n",
+       "8         61   1604\n",
+       "10        84   1091"
       ]
      },
      "metadata": {},
@@ -576,28 +746,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>38</td>\n",
-       "      <td>1303</td>\n",
+       "      <td>69</td>\n",
+       "      <td>1369</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>9</td>\n",
-       "      <td>1039</td>\n",
+       "      <td>27</td>\n",
+       "      <td>1297</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>8</td>\n",
-       "      <td>1014</td>\n",
+       "      <td>51</td>\n",
+       "      <td>1434</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>9</td>\n",
-       "      <td>1397</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1302</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>84</td>\n",
-       "      <td>1138</td>\n",
+       "      <td>71</td>\n",
+       "      <td>1972</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -606,11 +776,11 @@
       "text/plain": [
        "       price  other\n",
        "index              \n",
-       "3         38   1303\n",
-       "4          9   1039\n",
-       "5          8   1014\n",
-       "6          9   1397\n",
-       "7         84   1138"
+       "3         69   1369\n",
+       "4         27   1297\n",
+       "5         51   1434\n",
+       "6         82   1302\n",
+       "7         71   1972"
       ]
      },
      "metadata": {},
@@ -649,28 +819,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>38</td>\n",
-       "      <td>1303</td>\n",
+       "      <td>69</td>\n",
+       "      <td>1369</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>9</td>\n",
-       "      <td>1039</td>\n",
+       "      <td>27</td>\n",
+       "      <td>1297</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>8</td>\n",
-       "      <td>1014</td>\n",
+       "      <td>51</td>\n",
+       "      <td>1434</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>9</td>\n",
-       "      <td>1397</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1302</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>84</td>\n",
-       "      <td>1138</td>\n",
+       "      <td>71</td>\n",
+       "      <td>1972</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -679,11 +849,11 @@
       "text/plain": [
        "       price  other\n",
        "index              \n",
-       "3         38   1303\n",
-       "4          9   1039\n",
-       "5          8   1014\n",
-       "6          9   1397\n",
-       "7         84   1138"
+       "3         69   1369\n",
+       "4         27   1297\n",
+       "5         51   1434\n",
+       "6         82   1302\n",
+       "7         71   1972"
       ]
      },
      "metadata": {},
@@ -719,16 +889,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>84</td>\n",
+       "      <td>71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>98</td>\n",
+       "      <td>61</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>83</td>\n",
+       "      <th>10</th>\n",
+       "      <td>84</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -737,9 +923,13 @@
       "text/plain": [
        "       price\n",
        "index       \n",
-       "7         84\n",
-       "8         98\n",
-       "9         83"
+       "2         74\n",
+       "3         69\n",
+       "5         51\n",
+       "6         82\n",
+       "7         71\n",
+       "8         61\n",
+       "10        84"
       ]
      },
      "metadata": {},
@@ -770,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1564,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
