--- a/Random.ipynb
+++ b/Random.ipynb
@@ -218,6 +218,8 @@
     }
    ],
    "source": [
+    "# loc is the mean\n",
+    "# scale is the standard deviation\n",
     "returns = np.random.normal(loc=0.02, scale=0.05, size=1000)\n",
     "\n",
     "mean = np.mean(returns)\n",
